--- a/src/header.html
+++ b/src/header.html
@@ -12,7 +12,7 @@
     <img src="images/logo.png" class="pcLogo">
     <img src="images/logo2.png" alt="" class="moveLogo">
     <button></button>
-    <div class="login fr">登录我的图书馆</div>
+    <div class="login fr">登录</div>
     <ul class='pc'>
         <li>概况
             <div class="content-item clearfix">
